Fix input on Iphone and text style

--- a/src/components/Body/OfferingComponent/offering.scss
+++ b/src/components/Body/OfferingComponent/offering.scss
@@ -77,7 +77,7 @@
                 2px 2px 0 #FFFFFF,
                 4px 4px 0 #000000
         ;
-        font-size: 5vw;
+        font-size: 4vw;
         line-height: 30px;
       }
     }
