--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -174,12 +174,13 @@
     &__counter-value {
       width: 80px;
       height: 48px;
-      padding: 10px 5px;
+      //padding: 10px 5px;
       background-color: rgba(255, 255, 255, 0.25);
       border-radius: 12px;
       input {
         width: 100%;
         height: 100%;
+        line-height: 48px;
         background-color: transparent;
         border: none;
         outline: none !important;
